// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageWallet has the expected html structure 1`] = `
<div
  class="tm-page"
  data-title="Wallet"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
               
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total STAKE
                </h3>
                 
                <h2
                  class="total-atoms__value"
                >
                  1,014.0000…
                </h2>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available STAKE
                </h3>
                 
                <h2>
                  1,000.0000…
                </h2>
              </div>
            </div>
             
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                
    cosmos…xxn9
  
              </div>
               
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
             
            <div
              class="tabs"
            />
             
          </div>
           
          <div
            class="tool-bar"
          >
            <a
              class="back"
              disabled="disabled"
            >
              <i
                class="material-icons"
              >
                arrow_back
              </i>
            </a>
             
            <a
              class="refresh-button"
            >
              <i
                class="material-icons"
              >
                refresh
              </i>
            </a>
             
            <a
              class="search-button"
            >
              <i
                class="material-icons"
              >
                search
              </i>
            </a>
              
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
             
            <router-link-stub
              id="settings"
              to="/preferences"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </router-link-stub>
             
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      />
       
      <div
        class="tabs"
      />
       
      <!---->
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
    <!---->
     
    <li
      class="li-coin tm-li-balance"
      id="li-coin--fermion"
    >
      <div
        class="li-coin__icon"
      >
        <img
          src="~assets/images/cosmos-logo.png"
        />
      </div>
       
      <div
        class="li-coin__content"
      >
        <div
          class="li-coin__content__left__denom"
        >
          <p
            class="coin-denom"
          >
            fermion
          </p>
        </div>
         
        <div
          class="li-coin__content__left__amount"
        >
          <p
            class="coin-amount"
          >
            2,300.0000000000
          </p>
        </div>
         
        <button
          class="tm-btn"
        >
          <span
            class="tm-btn__container tm-btn--primary"
          >
            <!---->
            <span
              class="tm-btn__value"
            >
              Send
            </span>
          </span>
        </button>
      </div>
    </li>
    <li
      class="li-coin tm-li-balance"
      id="li-coin--stake"
    >
      <div
        class="li-coin__icon"
      >
        <img
          src="~assets/images/cosmos-logo.png"
        />
      </div>
       
      <div
        class="li-coin__content"
      >
        <div
          class="li-coin__content__left__denom"
        >
          <p
            class="coin-denom"
          >
            STAKE
          </p>
        </div>
         
        <div
          class="li-coin__content__left__amount"
        >
          <p
            class="coin-amount"
          >
            1,000.0000000000
          </p>
        </div>
         
        <button
          class="tm-btn"
        >
          <span
            class="tm-btn__container tm-btn--primary"
          >
            <!---->
            <span
              class="tm-btn__value"
            >
              Send
            </span>
          </span>
        </button>
      </div>
    </li>
    <li
      class="li-coin tm-li-balance"
      id="li-coin--mycoin"
    >
      <div
        class="li-coin__icon"
      >
        <img
          src="~assets/images/cosmos-logo.png"
        />
      </div>
       
      <div
        class="li-coin__content"
      >
        <div
          class="li-coin__content__left__denom"
        >
          <p
            class="coin-denom"
          >
            mycoin
          </p>
        </div>
         
        <div
          class="li-coin__content__left__amount"
        >
          <p
            class="coin-amount"
          >
            1,000.0000000000
          </p>
        </div>
         
        <button
          class="tm-btn"
        >
          <span
            class="tm-btn__container tm-btn--primary"
          >
            <!---->
            <span
              class="tm-btn__value"
            >
              Send
            </span>
          </span>
        </button>
      </div>
    </li>
    <li
      class="li-coin tm-li-balance"
      id="li-coin--gregcoin"
    >
      <div
        class="li-coin__icon"
      >
        <img
          src="~assets/images/cosmos-logo.png"
        />
      </div>
       
      <div
        class="li-coin__content"
      >
        <div
          class="li-coin__content__left__denom"
        >
          <p
            class="coin-denom"
          >
            gregcoin
          </p>
        </div>
         
        <div
          class="li-coin__content__left__amount"
        >
          <p
            class="coin-amount"
          >
            0.0000000000
          </p>
        </div>
         
        <button
          class="tm-btn"
        >
          <span
            class="tm-btn__container tm-btn--primary"
          >
            <!---->
            <span
              class="tm-btn__value"
            >
              Send
            </span>
          </span>
        </button>
      </div>
    </li>
     
  </main>
</div>
`;

exports[`PageWallet should filter the balances 1`] = `
<div
  class="tm-page"
  data-title="Wallet"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
               
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total STAKE
                </h3>
                 
                <h2
                  class="total-atoms__value"
                >
                  1,014.0000…
                </h2>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available STAKE
                </h3>
                 
                <h2>
                  1,000.0000…
                </h2>
              </div>
            </div>
             
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                
    cosmos…xxn9
  
              </div>
               
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
             
            <div
              class="tabs"
            />
             
          </div>
           
          <div
            class="tool-bar"
          >
            <a
              class="back"
              disabled="disabled"
            >
              <i
                class="material-icons"
              >
                arrow_back
              </i>
            </a>
             
            <a
              class="refresh-button"
            >
              <i
                class="material-icons"
              >
                refresh
              </i>
            </a>
             
            <a
              class="search-button"
            >
              <i
                class="material-icons"
              >
                search
              </i>
            </a>
              
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
             
            <router-link-stub
              id="settings"
              to="/preferences"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </router-link-stub>
             
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      />
       
      <div
        class="tabs"
      />
       
      <!---->
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
    <div
      class="tm-modal-search"
    >
      <div
        class="tm-modal-search-container"
      >
        <div
          class="tm-form-group"
        >
          <!---->
          <!---->
           
          <div
            class="tm-form-group__field"
          >
            <div
              class="tm-modal-search-field"
            >
              <input
                class="mousetrap tm-field"
                id="search-input"
                placeholder="Search..."
                type="text"
              />
               
              <button
                class="tm-btn"
              >
                <span
                  class="tm-btn__container"
                >
                  <i
                    aria-hidden="true"
                    class="tm-btn__icon material-icons"
                  >
                    close
                  </i>
                  <!---->
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <li
      class="li-coin tm-li-balance"
      id="li-coin--stake"
    >
      <div
        class="li-coin__icon"
      >
        <img
          src="~assets/images/cosmos-logo.png"
        />
      </div>
       
      <div
        class="li-coin__content"
      >
        <div
          class="li-coin__content__left__denom"
        >
          <p
            class="coin-denom"
          >
            STAKE
          </p>
        </div>
         
        <div
          class="li-coin__content__left__amount"
        >
          <p
            class="coin-amount"
          >
            1,000.0000000000
          </p>
        </div>
         
        <button
          class="tm-btn"
        >
          <span
            class="tm-btn__container tm-btn--primary"
          >
            <!---->
            <span
              class="tm-btn__value"
            >
              Send
            </span>
          </span>
        </button>
      </div>
    </li>
     
  </main>
</div>
`;

exports[`PageWallet should show the sending modal 1`] = `
<div
  class="tm-page"
  data-title="Wallet"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
               
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total STAKE
                </h3>
                 
                <h2
                  class="total-atoms__value"
                >
                  1,014.0000…
                </h2>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available STAKE
                </h3>
                 
                <h2>
                  1,000.0000…
                </h2>
              </div>
            </div>
             
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                
    cosmos…xxn9
  
              </div>
               
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
             
            <div
              class="tabs"
            />
             
          </div>
           
          <div
            class="tool-bar"
          >
            <a
              class="back"
              disabled="disabled"
            >
              <i
                class="material-icons"
              >
                arrow_back
              </i>
            </a>
             
            <a
              class="refresh-button"
            >
              <i
                class="material-icons"
              >
                refresh
              </i>
            </a>
             
            <a
              class="search-button"
            >
              <i
                class="material-icons"
              >
                search
              </i>
            </a>
              
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
             
            <router-link-stub
              id="settings"
              to="/preferences"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </router-link-stub>
             
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      />
       
      <div
        class="tabs"
      />
       
      <!---->
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
    <!---->
     
    <li
      class="li-coin tm-li-balance"
      id="li-coin--fermion"
    >
      <div
        class="li-coin__icon"
      >
        <img
          src="~assets/images/cosmos-logo.png"
        />
      </div>
       
      <div
        class="li-coin__content"
      >
        <div
          class="li-coin__content__left__denom"
        >
          <p
            class="coin-denom"
          >
            fermion
          </p>
        </div>
         
        <div
          class="li-coin__content__left__amount"
        >
          <p
            class="coin-amount"
          >
            2,300.0000000000
          </p>
        </div>
         
        <button
          class="tm-btn"
        >
          <span
            class="tm-btn__container tm-btn--primary"
          >
            <!---->
            <span
              class="tm-btn__value"
            >
              Send
            </span>
          </span>
        </button>
      </div>
    </li>
    <li
      class="li-coin tm-li-balance"
      id="li-coin--stake"
    >
      <div
        class="li-coin__icon"
      >
        <img
          src="~assets/images/cosmos-logo.png"
        />
      </div>
       
      <div
        class="li-coin__content"
      >
        <div
          class="li-coin__content__left__denom"
        >
          <p
            class="coin-denom"
          >
            STAKE
          </p>
        </div>
         
        <div
          class="li-coin__content__left__amount"
        >
          <p
            class="coin-amount"
          >
            1,000.0000000000
          </p>
        </div>
         
        <button
          class="tm-btn"
        >
          <span
            class="tm-btn__container tm-btn--primary"
          >
            <!---->
            <span
              class="tm-btn__value"
            >
              Send
            </span>
          </span>
        </button>
      </div>
    </li>
    <li
      class="li-coin tm-li-balance"
      id="li-coin--mycoin"
    >
      <div
        class="li-coin__icon"
      >
        <img
          src="~assets/images/cosmos-logo.png"
        />
      </div>
       
      <div
        class="li-coin__content"
      >
        <div
          class="li-coin__content__left__denom"
        >
          <p
            class="coin-denom"
          >
            mycoin
          </p>
        </div>
         
        <div
          class="li-coin__content__left__amount"
        >
          <p
            class="coin-amount"
          >
            1,000.0000000000
          </p>
        </div>
         
        <button
          class="tm-btn"
        >
          <span
            class="tm-btn__container tm-btn--primary"
          >
            <!---->
            <span
              class="tm-btn__value"
            >
              Send
            </span>
          </span>
        </button>
      </div>
    </li>
    <li
      class="li-coin tm-li-balance"
      id="li-coin--gregcoin"
    >
      <div
        class="li-coin__icon"
      >
        <img
          src="~assets/images/cosmos-logo.png"
        />
      </div>
       
      <div
        class="li-coin__content"
      >
        <div
          class="li-coin__content__left__denom"
        >
          <p
            class="coin-denom"
          >
            gregcoin
          </p>
        </div>
         
        <div
          class="li-coin__content__left__amount"
        >
          <p
            class="coin-amount"
          >
            0.0000000000
          </p>
        </div>
         
        <button
          class="tm-btn"
        >
          <span
            class="tm-btn__container tm-btn--primary"
          >
            <!---->
            <span
              class="tm-btn__value"
            >
              Send
            </span>
          </span>
        </button>
      </div>
    </li>
       
    <div
      class="action-modal"
      name="slide-fade"
      show-send-modal="true"
    >
      <div
        class="action-modal-header"
      >
        <img
          class="icon action-modal-atom"
          src="~assets/images/cosmos-logo.png"
        />
        <span
          class="action-modal-title"
        >
          Send
        </span>
         
        <div
          class="action-modal-icon action-modal-close"
          id="closeBtn"
        >
          <i
            class="material-icons"
          >
            close
          </i>
        </div>
      </div>
       
      <div
        class="action-modal-form"
      >
        <div
          class="tm-form-group"
        >
          <!---->
          <label
            class="tm-form-group__label"
            for="send-denomination"
          >
            Denomination
          </label>
           
          <div
            class="tm-form-group__field"
          >
            <input
              class="tm-field"
              id="send-denomination"
              readonly="readonly"
              type="text"
            />
             
            <!---->
          </div>
        </div>
         
        <div
          class="tm-form-group"
        >
          <!---->
          <label
            class="tm-form-group__label"
            for="send-address"
          >
            Send To
          </label>
           
          <div
            class="tm-form-group__field"
          >
            <input
              class="tm-field"
              id="send-address"
              placeholder="Address"
              type="text"
            />
             
            <!---->
          </div>
        </div>
         
        <div
          class="tm-form-group"
        >
          <!---->
          <label
            class="tm-form-group__label"
            for="send-amount"
          >
            Amount
          </label>
           
          <div
            class="tm-form-group__field"
          >
            <input
              class="tm-field"
              id="send-amount"
              placeholder="Amount"
              type="number"
            />
             
            <!---->
             
            <!---->
          </div>
        </div>
         
        <div
          class="tm-form-group"
        >
          <!---->
          <label
            class="tm-form-group__label"
            for="password"
          >
            Password
          </label>
           
          <div
            class="tm-form-group__field"
          >
            <input
              class="tm-field"
              id="password"
              placeholder="Password"
              type="password"
            />
             
            <!---->
          </div>
        </div>
         
      </div>
       
      <div
        class="action-modal-footer"
      >
        <div>
          <button
            class="tm-btn"
            disabled="disabled"
            id="send-btn"
          >
            <span
              class="tm-btn__container tm-btn--primary"
            >
              <!---->
              <span
                class="tm-btn__value"
              >
                Send Tokens
              </span>
            </span>
          </button>
        </div>
         
        <!---->
      </div>
    </div>
  </main>
</div>
`;
